[metadata]
name = divdrm
version = 0.0.1
author = Sergey Naumenko
description = Detect HIV Drug Resitant Mutations using amplicon sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bcbio/hivdrm.git
project_urls =
    Bug Tracker = https://github.com/bcbio/hivdrm/issues
    classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hivdrm
packages = find:
python_requires = >=3.6

[options.packages.find]
where = hivdrm
